[package]
authors = ["Andrea Ervetti", "Silvanus Bordignon"]
name = "profit_craftor"
version = "0.1.0"
edition = "2021"
exclude = [".*"]

[lib]
name = "profit_craftor"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robotics_lib = { version = "0.1.4", registry = "kellnr" }